syntax="proto2";

package com.distkv.rpc.protobuf;

import "common_pb.proto";

option java_package="com.distkv.rpc.protobuf.generated";
option java_outer_classname="SetProtocol";
option cc_generic_services = true;

message PutRequest {
    required string key = 1;
    repeated string values = 2;
}

message PutResponse {
    required Status status = 1;
}

message GetRequest {
    required string key = 1;
}

message GetResponse {
    required Status Status = 1;
    repeated string values = 2;
}

message PutItemRequest {
    required string key = 1;
    required string itemValue = 2;
}

message PutItemResponse {
    required Status status = 1;
}

message RemoveItemRequest {
    required string key = 1;
    // The entity that will be deleted from the set.
    required string itemValue = 2;
}

message RemoveItemResponse {
    required Status status = 1;
}

//drop the whole set
//
message ExistsRequest {
    required string key = 1;
    required string entity = 2;
}

message ExistsResponse {
    required Status status = 1;
    // If status is not OK, the result is undefined.
    optional bool result = 2;
}

service DstSetService {
    rpc put(PutRequest) returns (PutResponse);
    rpc get(GetRequest) returns (GetResponse);
    rpc putItem(PutItemRequest) returns (PutItemResponse);
    rpc removeItem(RemoveItemRequest) returns (RemoveItemResponse);
    rpc exists(ExistsRequest) returns (ExistsResponse);
    rpc drop(DropRequest) returns (DropResponse);
}
